--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap">
   </head>
   <body>
-    <div id="root"></div>
+    <div class="relative" id="root"></div>
     <script type="module" src="/main.jsx"></script>
   </body>
 </html>
